fixed animation flicker

--- a/client/sass/_animations.scss
+++ b/client/sass/_animations.scss
@@ -56,14 +56,14 @@
   height: 0;
   &.test-fade-enter-active {
     opacity: 1;
-    height: 163px;
+    height: 155px;
     transition: all 400ms;
   }
 }
 
 .test-fade-leave {
   opacity: 1;
-  height:163px;
+  height:155px;
   &.test-fade-leave-active {
     opacity: 0.01;
     height: 0;
