--- a/client/sass/_test.scss
+++ b/client/sass/_test.scss
@@ -44,12 +44,12 @@
 .products {
   background-color: white;
 }
+
 .test {
   overflow: hidden;
-    border-bottom: 1px solid #f4f4f4;
+  border-bottom: 1px solid #f4f4f4;
   .test-inner {
-    //height: 120px;
-    //display: flex;
+    box-sizing: border-box;
     background-color: white;
     padding: 16px;
     transition: all 200ms;
